After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796827 - xvimage: Fix symbol redefine build error
xvimage: Fix symbol redefine build error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.14.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-07-18 11:00 UTC by Seungha Yang
Modified: 2018-07-19 11:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
xvimage: Fix symbol redefine build error (2.08 KB, patch)
2018-07-18 11:01 UTC, Seungha Yang
committed Details | Review
libav: Fix symbol redefine build error (3.82 KB, patch)
2018-07-18 11:02 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2018-07-18 11:00:48 UTC
xvimage and libav plugins are exposing GstDebugCategory *CAT_PERFORMANCE symbol and which causes symbol redefine build error when both libraries are statically linked.
Comment 1 Seungha Yang 2018-07-18 11:01:41 UTC
Created attachment 373083 [details] [review]
xvimage: Fix symbol redefine build error
Comment 2 Seungha Yang 2018-07-18 11:02:14 UTC
Created attachment 373084 [details] [review]
libav: Fix symbol redefine build error
Comment 3 Tim-Philipp Müller 2018-07-19 11:31:43 UTC
Thanks, pushed!

commit db8235024523a0375443f36eb5fec627386452d5
Author: Seungha Yang <seungha.yang@navercorp.com>
Date:   Wed Jul 18 19:41:50 2018 +0900

    libav: Fix symbol redefine build error
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796827

commit 83c7dd233568c1774afdb7958940401aeef38020
Author: Seungha Yang <seungha.yang@navercorp.com>
Date:   Wed Jul 18 19:53:26 2018 +0900

    xvimage: Fix symbol redefine build error
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796827

Also picked into 1.14.