libav: Fix symbol redefine build error

https://bugzilla.gnome.org/show_bug.cgi?id=796827