ext/libav/gstav.c
@@ -42,7 +42,6 @@
 #endif
 
 GST_DEBUG_CATEGORY (ffmpeg_debug);
-GST_DEBUG_CATEGORY (CAT_PERFORMANCE);
 
 static GMutex gst_avcodec_mutex;
 
@@ -143,7 +142,6 @@ static gboolean
 plugin_init (GstPlugin * plugin)
 {
   GST_DEBUG_CATEGORY_INIT (ffmpeg_debug, "libav", 0, "libav elements");
-  GST_DEBUG_CATEGORY_GET (CAT_PERFORMANCE, "GST_PERFORMANCE");
 
   /* Bail if not FFmpeg. We can no longer ensure operation with Libav */
   if (!gst_ffmpeg_avcodec_is_ffmpeg ()) {
